[tool.poetry]
name = "rich-tracebacks"
version = "1.2.1"
description = "Automatic installation of Rich's traceback handler"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
homepage = "https://github.com/celsiusnarhwal/rich-tracebacks"
readme = "README.md"
license = "MIT"
include = ["rich_tracebacks.pth"]

[tool.poetry.dependencies]
python = "^3.6.3"
rich = "^12.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
